# decodage-huffman

./: CMakeLists.txt  LICENSE  README.md
src/: alphabet.cpp  alphabet.h  character.cpp  character.h  huffman_decoding.cpp  huffman_decoding.h  main.cpp  node.cpp  node.h  tree.cpp  tree.h
texts/: textesimple_freq.txt
